--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
 @import "_cards";
-@import "_header";
 @import "_genres";
 @import "_filters";
 
@@ -8,9 +7,31 @@
   box-sizing: border-box;
 }
 
-.main {
+.largeContainer {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin: 0 60px;
+}
+
+header {
+  @include decorative-font;
+  background-color: $beige-color;
+  margin-bottom: 30px;
+  padding: 30px;
+  text-align: center;
+}
+
+footer {
+  margin-top: 60px;
+  padding: 60px;
+  text-align: center;
+  background-color: $beige-color;
 }
