--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,4 @@
+@import "_fonts-colors";
 @import "~bootstrap/scss/bootstrap";
 @import "_cards";
 @import "_genres";
@@ -23,7 +24,8 @@ main {
 
 header {
   @include decorative-font;
-  background-color: $beige-color;
+  background-color: $primary-color;
+  color: $secondary-color;
   margin-bottom: 30px;
   padding: 30px;
   text-align: center;
@@ -33,5 +35,9 @@ footer {
   margin-top: 60px;
   padding: 60px;
   text-align: center;
-  background-color: $beige-color;
+  background-color: $primary-color;
+}
+
+h2 {
+  color: $secondary-color;
 }
