--- a/src/scss/_cards.scss
+++ b/src/scss/_cards.scss
@@ -4,6 +4,14 @@ h2 {
 
 .container {
   margin: 0;
+  padding: 0;
+}
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80%;
 }
 
 .row {
