--- a/src/scss/_fonts-colors.scss
+++ b/src/scss/_fonts-colors.scss
@@ -15,6 +15,7 @@ $secondary-color: #442101;
 
 // list-group
 $primary: $primary-color;
+$secondary: $secondary-color;
 $list-group-active-bg: $primary-color;
 $list-group-active-color: $secondary-color;
 $list-group-active-border-color: $secondary-color;
