--- a/src/scss/_cards.scss
+++ b/src/scss/_cards.scss
@@ -1,3 +1,8 @@
+.books-grid {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 h2 {
   margin-bottom: 20px;
 }
@@ -19,20 +24,22 @@ h2 {
 }
 
 .card {
-  width: 18rem;
+  max-width: 250px;
+  flex: 50%;
 
   p {
     font-size: 0.8rem;
   }
 
   .cover {
-    display: flex;
-    justify-content: center;
-    height: 200px;
+    margin: auto;
+    height: 300px;
   }
 
-  img {
-    max-width: 10rem;
+  .cover-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
   .card-title {
@@ -42,5 +49,23 @@ h2 {
 
   .card-text {
     color: $secondary-color;
+  }
+}
+
+@media (max-width: 600px) {
+  h5 {
+    font-size: 0.8rem;
+  }
+
+  .card {
+    max-width: 200px;
+    padding: 0 8px;
+    .cover {
+      height: 250px;
+    }
+
+    p {
+      font-size: 0.7rem;
+    }
   }
 }
